# boardfarm-bdd

./: .develop-testsuite-progress.md  .gitignore  LICENSE  README.md  bfcli.md  conftest.py  console_output.txt  log.html  output.xml  pyproject.toml  pytest.ini  restructure_docs.md  run_coverage.py  seed_test.json  validate-ssh.sh
Excalidraw/: Top_level_QoE.excalidraw.md  data-flow-diagram.excalidraw  development_and_release_process.excalidraw  dual-wan-testbed-topology.excalidraw  dual-wan-testbed-topology.excalidraw.excalidraw  five-layer-architecture.excalidraw  ovs-management-bridge.excalidraw  physical-management-connectivity.excalidraw  physical-simulated-network-topology.excalidraw  process_template.excalidraw  pytest-bdd-architecture.excalidraw  robot-framework-architecture.excalidraw  sdwan-management-bridge.excalidraw  simulated-network-topology.excalidraw  software_architecture.excalidraw  topology_template.excalidraw  triple_wan_topology.excalidraw.md
bf_config/: bf_config_sdwan.json  bf_env_sdwan.json  boardfarm_config_example.json  boardfarm_config_openwrt.json  boardfarm_config_prplos_rpi.json
docs/: ACS-CPE Compatibility Investigation - Consolidated Findings.md  Application_Services_Implementation_Plan.md  Boardfarm Test Automation Architecture.md  Centralized_Log_Collector_Implementation.md  Configuration Cleanup Process.md  Firmware Image Requirements for PrplOS Verification.md  GenieACS_Reboot_Button_Analysis.md  Intervention Points Analysis.md  LinuxSDWANRouter_Implementation_Plan.md  Manual Firmware Image Preparation and Upgrade Testing Guide.md  Network Topology Analysis: Raikou and Boardfarm Testbed.md  Option 4 Investigation - Direct cwmpd Download.md  QoE_Client_Implementation_Plan.md  README_UI_Testing.md  Rationale for PrplOS Containerized Upgrade Process.md  SDWAN_Testbed_Configuration.md  Scalable_gui_testing_implementation.md  Technical Brief_ Automated QoE Verification.md  Testbed Network Topology.md  Testbed validation using pfSense.md  Testbed_CA_Setup.md  TrafficGenerator_Implementation_Plan.md  Traffic_Management_Components_Architecture.md  UI_Testing_Guide.md  WAN_Edge_Appliance_testing.md  automated_ui_maintenance_strategy.md  cpe_deviceclass_development_plan.md  default_password_investigation.md  document_improvement.md  dual_framework_restructure_plan.md  genieacs_ui_automation_approach.md  genieacs_ui_interaction_map_example.md  index.md  management-network-isolation.md  openwrt_implementation_plan.md  openwrt_topology_correction_migration.md  password_cleanup_analysis.md  prplos_rpi_console_api.md  prplos_rpi_implementation_plan.md  prplos_rpi_phase1_build_guide.md  (+10 more)
raikou/: config.json  config_openwrt.json  config_sdwan.json  docker-compose-openwrt.yaml  docker-compose-sdwan.yaml  docker-compose.yaml  docker-compose_old.yaml  enable_internet_access.sh  validate-ssh.sh  verify-images.sh
requirements/: Device Class - RPi prplOS CPE.md  UC-12345 upgrade cpe firmware.md  UC-12347 remote cpe reboot.md  UC-12348 User makes a one-way call.md  UC-ACS-GUI-01 ACS GUI Device Management.md  UC-SDWAN-01 WAN Failover Maintains Application Continuity.md  UC-SDWAN-06 QoS Priority Under WAN Contention.md  (+4 more)
(+285 files in other folders)
